--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
+html {
+  margin: 0;
+  height: 100%;
+}
+
 body {
+  height: 100%;
   font-family: "Montserrat", sans-serif !important;
   margin: 0;
   text-align: center;
-  background: url("img/background.jpg");
+}
+
+.page-wrapper {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
 }
 
 h1 {
@@ -19,10 +30,10 @@ h2 {
 }
 
 .header {
+  flex-grow: 0;
   padding: 3vh 0;
   background-color: #e5e5e5;
   color: #27052b;
-  height: 24vh;
 }
 
 .btn-container {
@@ -59,10 +70,11 @@ h2 {
   background-color: #132e65;
 }
 .btn-weight:hover {
-  background-color: #204692;
+  background-color: #2955ad;
 }
 
 .content {
+  flex-grow: 1;
   padding: 2vh;
   background-image: linear-gradient(
     #27052b,
@@ -71,7 +83,6 @@ h2 {
     #13123b,
     #061b3f
   );
-  height: 66vh;
 }
 
 .content-container {
@@ -116,6 +127,10 @@ h2 {
   background-color: #251c59;
 }
 
+.submit-input:hover {
+  background-color: #443696;
+}
+
 .conv-value {
   font-size: 2rem;
   color: #132e65;
@@ -140,6 +155,7 @@ h2 {
   }
 
   .conv_units select {
+    width: 35vh;
     display: block;
     margin: 0.5rem auto;
   }
